Fix variable naming, add aria-live updates, fix audio and video asset visibility

--- a/src/player.scss
+++ b/src/player.scss
@@ -596,6 +596,11 @@ body {
 					width            : 100%;
 					background-color : $a;
 
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					gap: 10px;
+
 					-webkit-backface-visibility : hidden;
 					   -moz-backface-visibility : hidden;
 					    -ms-backface-visibility : hidden;
@@ -607,8 +612,8 @@ body {
 					        transition : all 700ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
 
 					.content {
-						height : inherit;
-						width  : inherit;
+						// height : inherit;
+						// width  : inherit;
 						overflow-y : auto;
 
 						-webkit-transform-style: preserve-3d;
@@ -640,7 +645,7 @@ body {
 						}
 					}
 					.asset {
-						margin-top : -280px;
+						// margin-top : -280px;
 
 						audio {
 							max-width : 100%;
@@ -662,7 +667,7 @@ body {
 								max-height : 200px;
 							}
 							&.mixed {
-								margin-top : 10%;
+								// margin-top : 10%;
 								max-height: 200px;
 							}
 						}
